Add GitHub Actions workflow to publish npm package and update package name and version
* **.github/workflows/publish.yml**
  - Create a GitHub Actions workflow to publish the npm package
  - Add steps to install dependencies, build the package, and publish to npm

* **package.json**
  - Rename the package under `@imwildcat/**`
  - Bump the version to `0.1.2`

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@algora/xtrpc",
-  "version": "0.1.1",
+  "name": "@imwildcat/xtrpc",
+  "version": "0.1.2",
   "description": "Export your tRPC router to massively improve language server performance and/or let your users consume your API from a typed SDK",
   "author": "Algora PBC. <info@algora.io> (https://algora.io)",
   "maintainers": [
