--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     /* language compilation options */
     "target": "ES2020",
     "lib": ["DOM", "DOM.Iterable", "ES2020"],
-    "module": "Node16",
+    "module": "NodeNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "allowJs": true,
