--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,8 @@ jobs:
         with:
           node-version: '22'
           registry-url: 'https://registry.npmjs.org'
-
+      - name: Enable pnpm
+        run: npm install -g pnpm
       - name: Install dependencies
         run: pnpm install
 
