--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     /* language compilation options */
     "target": "ES2020",
     "lib": ["DOM", "DOM.Iterable", "ES2020"],
-    "module": "NodeNext",
-    "moduleResolution": "node",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "resolveJsonModule": true,
     "allowJs": true,
     "checkJs": true,
